welcome.lessons.welcome.methods.flowerpot.FlowerCase.scala.error
FlowerCase:1: error: ':' expected but ')' found.
def avancer(x){
             ^FlowerCase:45: error: identifier expected but '}' found.
}
^